--- a/Gruppenaufgabe/lukas_weier/impressionen.html
+++ b/Gruppenaufgabe/lukas_weier/impressionen.html
@@ -18,7 +18,7 @@
 
 <body>
     <header>
-
+        <!--Navigation bar-->
         <nav>
             <div class="header">
                 <span class="left">
@@ -38,6 +38,7 @@
     <main>
         <h2 style="text-align: center;">Anwendung im Alltag</h2>
         <div class="container">
+            <!--First Video with text-->
             <div class="content-right">
                 <p style="padding-right: 3%;">
                     Im Alltag gibt es zahlreiche Momente in denen ein Smart Home hilfreich sein kann.<br> Wenn man beispiels weise mehrere Lichter in einem Raum hat und diese nicht<br> manuell alle einzeln ausschalten möchte gibt es mehrere Möglichkeiten
@@ -52,6 +53,7 @@
                 </div>
             </div>
 
+            <!--Second Video with text-->
             <div class="content-left">
                 <div id="audio">
                     <video controls preload="auto" style="width: 850px; height: 395px;">
@@ -66,6 +68,8 @@
                     oder man nutzt dazu den<br> den Sprachassistenten selbst. Wie dies funktioniert sieht man in folgendem Beispiel:<br>
                 </p>
             </div>
+
+            <!--Audio with text-->
             <div class="content-right">
                 <p style="padding-right: 3%;">
                     Außerdem gibt es die Möglichkeit über Sprachassistenten Musik in verschiedenen Räumen <br> gleichzeitig zu hören. Dabei hat man die Möglichkeit aus der Musikbibliothek von Spotify, <br> Apple Music und Co. aus Millionen von Titeln
@@ -81,6 +85,7 @@
         </div>
     </main>
 
+    <!--Footer-->
     <footer id="footer">
         <a id="footer_text" href="kontakt.html">&#169; Lukas Weier</a>
     </footer>
