Änderung Fußnote Soeren

--- a/Gruppenaufgabe/soeren_scheibner/soeren_scheibner.html
+++ b/Gruppenaufgabe/soeren_scheibner/soeren_scheibner.html
@@ -194,7 +194,7 @@
       <!-- #content -->
       <div id="footer">
         <address>
-          Sören Scheibner &middot; In der Musterstraße 512 &middot; 25694
+          &copy; Sören Scheibner &middot; In der Musterstraße 512 &middot; 25694
           Musterhausen - Germany
         </address>
       </div>
