--- a/Gruppenaufgabe/lukas_weier/impressionen.html
+++ b/Gruppenaufgabe/lukas_weier/impressionen.html
@@ -63,9 +63,9 @@
                     </video>
                 </div>
                 <p style="padding-left: 3%;">
-                    Außerdem gibt es die Möglichkeit über Sprachassistenten Musik in verschiedenen Räumen gleichzeitig zu hören. <br> Dabei hat man die Möglichkeit aus der Musikbibliothek von Spotify, Apple Music und Co. aus Millionen
-                    <br> von Titeln ein Lied auszusuchen und dieses sofort zu hören.<br> Dafür kann man entweder sein Smartphone nutzen und die Titel über Spotify Connect, Bluetooth,<br> AirPlay oder allen anderen gängigen Techniken auf die Geräte streamen
-                    oder man nutzt dazu den<br> den Sprachassistenten selbst. Wie dies funktioniert sieht man in folgendem Beispiel:<br>
+                    Außerdem gibt es die Möglichkeit über Sprachassistenten Musik in verschiedenen Räumen gleichzeitig zu hören. <br> Dabei hat man die Möglichkeit aus der Musikbibliothek von Spotify, Apple Music und Co. aus Millionen<br> von Titeln ein
+                    Lied auszusuchen und dieses sofort zu hören.<br> Dafür kann man entweder sein Smartphone nutzen und die Titel über Spotify Connect, Bluetooth,<br> AirPlay oder allen anderen gängigen Techniken auf die Geräte streamen oder man nutzt
+                    dazu den<br> den Sprachassistenten selbst. Wie dies funktioniert sieht man in folgendem Beispiel:<br>
                 </p>
             </div>
 
