--- a/Gruppenaufgabe/soeren_scheibner/soeren_scheibner.html
+++ b/Gruppenaufgabe/soeren_scheibner/soeren_scheibner.html
@@ -93,7 +93,8 @@
           Mannschaftsmitglieder = eine Gruppe) transportieren. Auf diesem Auto
           ist der Technische Hilfeleistungssatz (Schere, Spreizer, etc.) der
           Stadtfeuerwehr verlastet. Außerdem verfügt es über eine
-          Tragkraftspritze und 120 Liter Schaummittel.
+          Tragkraftspritze und 120 Liter Schaummittel. In dem Audio kann man
+          hören wie sich das LF beim starten anhört.
         </p>
         <audio controls class="audio-size">
           <source
@@ -110,7 +111,10 @@
             src="assets/audios/Feuerwehrauto anlassen.wav"
             type="audio/wav"
           />
-          <p>Dieser Browser unterstützt das Audio-Format nicht</p>
+          <p>
+            Dieser Browser unterstützt das Audio-Format nicht. Es ist zu hören
+            wie das LF startet.
+          </p>
         </audio>
       </div>
       <div class="box_container">
@@ -143,7 +147,10 @@
             src="assets/videos/Feuerwehrauto fährt los.webm#t=14"
             type="video/webm"
           />
-          <p>Dieser Browser unterstützt das Video-Format nicht</p>
+          <p>
+            Dieser Browser unterstützt das Video-Format nicht. Das Video zeigt
+            ein TLF wie es aus dem Gerätehaus fährt.
+          </p>
         </video>
       </div>
       <div id="canvas">
