Beschreibung canvas geändert

--- a/Gruppenaufgabe/soeren_scheibner/soeren_scheibner.html
+++ b/Gruppenaufgabe/soeren_scheibner/soeren_scheibner.html
@@ -180,7 +180,7 @@
           }
         </script>
         <p>
-          <a href="javascript:drawCanvas();">Klick mich und ich dreh mich!</a>
+          <a href="javascript:drawCanvas();">Klick mich und es dreht sich!</a>
         </p>
       </div>
       <div>
