--- a/Gruppenaufgabe/soeren_scheibner/soeren_scheibner.html
+++ b/Gruppenaufgabe/soeren_scheibner/soeren_scheibner.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="de">
+<!DOCTYPE html>
+<html lang="de">
   <!-- metadata -->
 
   <head>
@@ -21,7 +21,7 @@
     <div id="wrapper">
       <div id="header">
         <img
-          src="assets/images/Feuerwehr-Signet1.png"
+          src="assets/images/Feuerwehr_Signet.png"
           alt="Logo der Feuerwehr"
           title="Logo der Feuerwehr"
         />
@@ -77,8 +77,8 @@
           Jugendlichen.
         </p>
         <img
-          height="200px"
-          width="300px"
+          height="200"
+          width="300"
           src="assets/images/MTW.jpg"
           alt="Mannschaftstransportwagen der Feuerwehr Loccum"
           title="Mannschaftstransportwagen der Feuerwehr Loccum"
@@ -98,17 +98,17 @@
         </p>
         <audio controls class="audio-size">
           <source
-            src="assets/audios/Feuerwehrauto anlassen.ogg"
+            src="assets/audios/Feuerwehrauto_anlassen.ogg"
             type="audio/ogg"
           />
 
           <source
-            src="assets/audios/Feuerwehrauto anlassen.mp3"
+            src="assets/audios/Feuerwehrauto_anlassen.mp3"
             type="audio/mp3"
           />
 
           <source
-            src="assets/audios/Feuerwehrauto anlassen.wav"
+            src="assets/audios/Feuerwehrauto_anlassen.wav"
             type="audio/wav"
           />
           <p>
@@ -133,18 +133,18 @@
           height="400"
           width="500"
           preload="auto"
-          poster="assets/images/Feuerwehrauto fährt los.PNG"
+          poster="assets/images/Screenshot_Feuerwehrauto_fährt_los.PNG"
         >
           <source
-            src="assets/videos/Feuerwehrauto fährt los.mov#t=14"
+            src="assets/videos/Feuerwehrauto_fährt_los.mov#t=14"
             type="video/mp4"
           />
           <source
-            src="assets/videos/Feuerwehrauto fährt los.ogv#t=14"
+            src="assets/videos/Feuerwehrauto_fährt_los.ogv#t=14"
             type="video/ogg"
           />
           <source
-            src="assets/videos/Feuerwehrauto fährt los.webm#t=14"
+            src="assets/videos/Feuerwehrauto_fährt_los.webm#t=14"
             type="video/webm"
           />
           <p>
@@ -184,14 +184,11 @@
         </p>
       </div>
       <div>
-        <button class="btn">
-          <i class="fa fa-download"></i>
-          <a
-            target="_blank"
-            href="assets/pdf/Information about meat .pdf"
-            style="color: gold; text-decoration: none"
-            >Download PDF</a
-          >
+        <button
+          class="btn"
+          onclick="window.open('assets/pdf/Information_about_meat.pdf')"
+        >
+          <i class="fa fa-download"></i>Download PDF
         </button>
         <p>
           Über den Button können sie eine PDF mit vielen weiteren Informationen
